--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "fhir-death-refactor",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://nightingaleproject.github.io/fhir-death-refactor",
   "dependencies": {
-    "@fortawesome/fontawesome-free-solid": "^5.0.9",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "fhirclient": "^0.1.12",
@@ -18,7 +18,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
