--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0",
     "semantic-ui-css": "^2.3.1",
-    "semantic-ui-react": "^0.79.0"
+    "semantic-ui-react": "^0.79.0",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
