--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "core-js": "^2.5.6",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "fhirclient": "^0.1.12",
+    "fhirclient": "nightingaleproject/client-js#bugfix",
     "lodash": "^4.17.5",
     "moment": "^2.20.1",
     "react": "^16.2.0",
