--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "homepage": "http://nightingaleproject.github.io/fhir-death-refactor",
   "dependencies": {
-    "core-js": "^2.5.6",
+    "core-js": "^2.6.9",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "fhirclient": "nightingaleproject/client-js#bugfix",
@@ -12,9 +12,9 @@
     "moment": "^2.20.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.0",
+    "react-scripts": "3.1.1",
     "semantic-ui-css": "^2.3.1",
-    "semantic-ui-react": "^0.79.0",
+    "semantic-ui-react": "^0.88.1",
     "uuid": "^3.2.1"
   },
   "scripts": {
@@ -27,5 +27,17 @@
   },
   "devDependencies": {
     "gh-pages": "^1.1.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
